--- a/Hw1/css/main.css
+++ b/Hw1/css/main.css
@@ -3,7 +3,7 @@ table,td,th{
     border-collapse: collapse;
 }
 td{
-    font-family: Arial, Helvetica, sans-serif
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
 }
 td,th{
