--- a/Hw2/css/style.css
+++ b/Hw2/css/style.css
@@ -1,6 +1,33 @@
 
 
 /* ************ ADD YOUR CUSTOM STYLES ************ */
+*{
+  margin: 0;
+  padding: 0;
+}
+
+html,body{
+  height:100%;
+}
+body{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  line-height: 1.5;
+  font-weight: 300;
+  background-color:rgb(255, 255, 255);
+}
+.wrap:before,.wrap:after {
+  content: "";
+  display: table; }
+
+.wrap:after {
+  clear: both; }
+
+.wrap {
+  max-width: 800px;
+  padding: 0 30px;
+  margin: 0 auto;
+  zoom: 1; }
 
 
 
