--- a/Hw5/css/style.css
+++ b/Hw5/css/style.css
@@ -63,5 +63,9 @@
   margin: -1px 0 0 0;
   top: 100%;
   left: 0;
+  pointer-events:none;
 }
-
+.line {
+  fill: none;
+  stroke: #ffab00;
+  stroke-width: 3;
